--- a/web/templates/login.html
+++ b/web/templates/login.html
@@ -2,59 +2,56 @@
 {% block content %}
     <h1 class="maincont-ttl">Registration / Login</h1>
     <ul class="b-crumbs">
-        <li><a href="index.html">Home</a></li>
-        <li>Registration & Login</li>
-    </ul>                                                <article class="page-cont">
-    <div class="page-styling">
+        <li><a href="{% url 'web:index' %}">Home</a></li> <li>Registration & Login</li> </ul> <article class="page-cont">
+        <div class="page-styling">
+            <div class="auth-wrap">
+                <!-- Login Section -->
+                <div class="auth-col">
+                    <h2>Login</h2>
+                    <form method="post" class="login" action="{% url 'web:loginUsuario' %}">
+                        {% csrf_token %}
+                        <input type="hidden" name="destino" value="{{destino}}">
 
-
-        <div class="auth-wrap">
-            <div class="auth-col">
-                <h2>Login</h2>
-                <form method="post" class="login" action="{% url 'web:loginUsuario' %}">
-                    {% csrf_token %}
-                    <p>
-                        <label for="username">E-mail <span class="required">*</span></label>
-                        <input type="text" id="username" name="usuario">
-                    </p>
-                    <p>
-                        <label for="password">Password <span class="required">*</span></label>
-                        <input type="password" id="password" name="password">
-                    </p>
-                    <p class="auth-submit">
-                        <input type="submit" value="Login">
-                        <input type="checkbox" id="rememberme" value="forever">
-                        <label for="rememberme">Remember me</label>
-                    </p>
-                    <p>
-                        <label for="alert-danger"> {{error}}</label>
-                    </p>
-                    <p class="auth-lost_password">
-                        <a href="#">Lost your password?</a>
-                    </p>
-                </form>
-            </div>
-            <div class="auth-col">
-                <h2>Registro</h2>
-                <form method="post" class="register" action="{% url 'web:crearUsuario' %}">
-                    {% csrf_token %}
-                    <p>
-                        <label for="reg_email">Email <span class="required">*</span></label>
-                        <input type="email" id="reg_email" name="nuevoUsuario">
-                    </p>
-                    <p>
-                        <label for="reg_password">Password <span class="required">*</span></label>
-                        <input type="password" id="reg_password" name="nuevoPassword">
-                    </p>
-                    <p class="auth-submit">
-                        <input type="submit" value="Crear Cuenta">
-                    </p>
-                </form>
+                        <p>
+                            <label for="username">E-mail <span class="required">*</span></label>
+                            <input type="text" id="username" name="usuario" required>
+                        </p>
+                        <p>
+                            <label for="password">Password <span class="required">*</span></label>
+                            <input type="password" id="password" name="password" required>
+                        </p>
+                        <p class="auth-submit">
+                            <input type="submit" value="Login">
+                            <input type="checkbox" id="rememberme" name="rememberme" value="forever">
+                            <label for="rememberme">Remember me</label>
+                        </p>
+                        {% if mensajeError %}
+                        <p class="alert-danger">{{ mensajeError }}</p>
+                        {% endif %}
+                        <p class="auth-lost_password">
+                            <a href="#">Lost your password?</a>
+                        </p>
+                    </form>
+                </div>
+                <!-- Registration Section -->
+                <div class="auth-col">
+                    <h2>Registro</h2>
+                    <form method="post" class="register" action="{% url 'web:crearUsuario' %}">
+                        {% csrf_token %}
+                        <p>
+                            <label for="reg_email">Email <span class="required">*</span></label>
+                            <input type="email" id="reg_email" name="nuevoUsuario" required>
+                        </p>
+                        <p>
+                            <label for="reg_password">Password <span class="required">*</span></label>
+                            <input type="password" id="reg_password" name="nuevoPassword" required>
+                        </p>
+                        <p class="auth-submit">
+                            <input type="submit" value="Crear Cuenta">
+                        </p>
+                    </form>
+                </div>
             </div>
         </div>
-
-
-    </div>
-</article>
-
+    </article>
 {% endblock %}
